--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -57,6 +57,17 @@
       ]
     },
     {
+      "login": "Utkarsh-Aggarwal",
+      "name": "Utkarsh Aggarwal",
+      "avatar_url": "https://avatars.githubusercontent.com/u/157223137?v=4",
+      "profile": "https://github.com/Utkarsh-Aggarwal",
+      "contributions": [
+        "code",
+        "doc",
+        "test"
+      ]
+    },
+    {
       "login": "Tomiiwa",
       "name": "Ireoluwatomiwa",
       "avatar_url": "https://avatars.githubusercontent.com/u/61966277?v=4",
