[BUG] Make sure distributor gets passed through to extract_features (#7541)
#### What does this implement/fix? Explain your changes.
TSFresh has a feature that allows users to pass [custom parallelization
distributors](https://tsfresh.readthedocs.io/en/latest/text/tsfresh_on_a_cluster.html#parallelization-beyond-a-single-machine).

The current implementation of `TSFreshFeatureExtractor` and
`TSFreshRelevantFeatureExtractor` do not pass through distributor all
the way to `extract_features`. This PR fixes that.

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -3297,6 +3297,15 @@
       ]
     },
     {
+      "login": "marcosfelt",
+      "name": "Kobi Felton",
+      "avatar_url": "https://avatars.githubusercontent.com/u/25933639?v=4",
+      "profile": "https://github.com/marcosfelt",
+      "contributions": [
+        "code"
+      ]
+    },
+    {
       "login": "b9junkers",
       "name": "Shounak Shirodkar",
       "avatar_url": "https://avatars.githubusercontent.com/u/54496663?v=4",
