--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -182,15 +182,6 @@
       ]
     },
     {
-      "login": "jgyasu",
-      "name": "Jigyasu",
-      "avatar_url": "https://avatars.githubusercontent.com/u/94278611?s=400&u=19941ae4723ef841b3a3c7df996214efadc98c45&v=4",
-      "profile": "https://www.linkedin.com/in/jgyasu/",
-      "contributions": [
-        "code"
-      ]
-    },
-    {
       "login": "jesellier",
       "name": "jesellier",
       "avatar_url": "https://avatars0.githubusercontent.com/u/51952076?v=4",
@@ -3275,6 +3266,16 @@
       "profile": "https://github.com/y-mx",
       "contributions": [
         "code"
+      ]
+    },
+    {
+      "login": "jgyasu",
+      "name": "Jigyasu",
+      "avatar_url": "https://avatars0.githubusercontent.com/u/51952076?v=4",
+      "profile": "https://jgyasu.github.io",
+      "contributions": [
+        "code",
+        "doc"
       ]
     },
     {
