--- a/pyproject.toml
+++ b/pyproject.toml
@@ -189,6 +189,8 @@ classification = [
 clustering = [
   'numba<0.61,>=0.53; python_version < "3.13"',
   'tslearn<0.7.0,!=0.6.0,>=0.5.2; python_version < "3.12"',
+  'tsvg',
+  'networkx',
 ]
 detection = [
   'hmmlearn<0.4,>=0.2.7; python_version < "3.13"',
