--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -3260,6 +3260,15 @@
       ]
     },
     {
+      "login": "TanviPooranmal",
+      "name": "Tanvi Pooranmal Meena"
+      "avatar_url": "https://avatars.githubusercontent.com/TanviPooranmal",
+      "profile": "https://github.com/TanviPooranmal",
+      "contributions": [
+        "code"
+      ]
+    },
+    {
       "login": "y-mx",
       "name": "Yimeng Xie",
       "avatar_url": "https://avatars.githubusercontent.com/y-mx",
