--- a/pyproject.toml
+++ b/pyproject.toml
@@ -263,6 +263,8 @@ docs = [
   "sphinx-gallery<0.19.0",
   "sphinx-issues<6.0.0",
   "tabulate",
+  "networkx",
+  "ts2vg",
 ]
 tests = [
   "pytest>=7.4,<8.4",
