[ENH] Set context_len and horizon_len per default in TimesFMForecaster

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -3260,10 +3260,10 @@
       ]
     },
     {
-      "login": "TanviPooranmal",
+      "login": "tanvincible",
       "name": "Tanvi Pooranmal Meena",
-      "avatar_url": "https://avatars.githubusercontent.com/TanviPooranmal",
-      "profile": "https://github.com/TanviPooranmal",
+      "avatar_url": "https://avatars.githubusercontent.com/tanvincible",
+      "profile": "https://github.com/tanvincible",
       "contributions": [
         "code",
         "doc"
