--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -3260,8 +3260,18 @@
       ]
     },
     {
+      "login": "satvshr",
+      "name": "Satvik Mishra",
+      "avatar_url": "https://avatars.githubusercontent.com/u/112589278",
+      "profile": "https://github.com/satvshr",
+      "contributions": [
+        "code",
+        "bug"
+      ]
+    },
+    {
       "login": "TanviPooranmal",
-      "name": "Tanvi Pooranmal Meena"
+      "name": "Tanvi Pooranmal Meena",
       "avatar_url": "https://avatars.githubusercontent.com/TanviPooranmal",
       "profile": "https://github.com/TanviPooranmal",
       "contributions": [
