--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -3250,6 +3250,15 @@
       ]
     },
     {
+      "login": "HarshvirSandhu",
+      "name": "Harshvir Sandhu",
+      "avatar_url": "https://avatars.githubusercontent.com/HarshvirSandhu",
+      "profile": "https://github.com/HarshvirSandhu",
+      "contributions": [
+        "code"
+      ]
+    },
+    {
       "login": "alyssadsouza",
       "name": "Alyssa D'Souza",
       "avatar_url": "https://avatars.githubusercontent.com/alyssadsouza",
@@ -3283,7 +3292,7 @@
       "avatar_url": "https://avatars.githubusercontent.com/u/130629672?v=4",
       "profile": "https://github.com/Adarsh2345",
       "contributions": [
-         "doc"
+        "doc"
       ]
     },
     {
