[ENH] Forecaster imputer for RecursiveReductionForecaster (#7535)
#### Reference Issues/PRs
Fixes #7477 

#### What does this implement/fix? Explain your changes.
This proposal aims to introduce the capability to incorporate a
`forecaster` into the imputation process within the
`RecursiveReductionForecaster `(RRF). Specifically, it suggests allowing
RRF to accept a forecaster as an initialization argument and to
initialize the Imputer with` method="forecaster"` during the `fit`,
`predict_in_sample`, `predict_out_of_sample `when a forecaster is
provided. This feature would be a valuable enhancement, delivering
greater flexibility and precision in managing missing values.

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -3261,7 +3261,7 @@
     },
     {
       "login": "TanviPooranmal",
-      "name": "Tanvi Pooranmal Meena"
+      "name": "Tanvi Pooranmal Meena",
       "avatar_url": "https://avatars.githubusercontent.com/TanviPooranmal",
       "profile": "https://github.com/TanviPooranmal",
       "contributions": [
@@ -3312,6 +3312,15 @@
       "profile": "https://github.com/gavinkatz001",
       "contributions": [
         "doc",
+        "code"
+      ]
+    },
+    {
+      "login": "lenaklosik",
+      "name": "Lena Klosik",
+      "avatar_url": "https://avatars.githubusercontent.com/lenaklosik",
+      "profile": "https://github.com/lenaklosik",
+      "contributions": [
         "code"
       ]
     },
