[DOC] Fix invalid link to elections repository in sktime's website (#7631)
<!--
Welcome to sktime, and thanks for contributing!
Please have a look at our contribution guide:
https://www.sktime.net/en/latest/get_involved/contributing.html
-->

#### Reference Issues/PRs

- Fixes #7630.
<!--
Example: Fixes #1234. See also #3456.

Please use keywords (e.g., Fixes) to create link to the issues or pull
requests
you resolved, so that they will automatically be closed when your pull
request
is merged. See
https://github.com/blog/1506-closing-issues-via-pull-requests.
If no issue exists, you can open one here:
https://github.com/sktime/sktime/issues
-->


#### What does this implement/fix? Explain your changes.

Previously, the link was interpreted as a relative path, leading to an
incorrect redirection
(https://www.sktime.net/en/stable/about/www.github.com/sktime/elections).
Updated the URL in the documentation (`docs/source/about/team.rst`) to
include the full protocol (`https://`), ensuring the link is interpreted
as an absolute URL.

https://github.com/sktime/elections

<!--
A clear and concise description of what you have implemented.
-->

#### Does your contribution introduce a new dependency? If yes, which
one?

N/A
<!--
Only relevant if you changed pyproject.toml.
We try to minimize dependencies in the core dependency set. There
are also further specific instructions to follow for soft dependencies.
See here for handling dependencies in sktime:
https://www.sktime.net/en/latest/developer_guide/dependencies.html
-->

#### Did you add any tests for the change?

<!-- This section is useful if you have added a test in addition to the
existing ones. This will ensure that further changes to these files
won't introduce the same kind of bug. It is considered good practice to
add tests with newly added code to enforce the fact that the code
actually works. This will reduce the chance of introducing logical bugs.
-->
I v

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -3265,7 +3265,8 @@
       "avatar_url": "https://avatars.githubusercontent.com/TanviPooranmal",
       "profile": "https://github.com/TanviPooranmal",
       "contributions": [
-        "code"
+        "code",
+        "doc"
       ]
     },
     {
