--- a/pyproject.toml
+++ b/pyproject.toml
@@ -190,7 +190,7 @@ clustering = [
   'networkx<3.5',
   'numba<0.61,>=0.53; python_version < "3.13"',
   'tslearn<0.7.0,!=0.6.0,>=0.5.2; python_version < "3.12"',
-  'ts2vg<1.3',
+  'ts2vg<1.3; python_version < "3.13"',
 ]
 detection = [
   'hmmlearn<0.4,>=0.2.7; python_version < "3.13"',
