adding type spec for SeriesDask and adding myself to contributorsrc

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -3351,6 +3351,15 @@
       "contributions": [
         "doc"
       ]
+    },
+    {
+    "login": "DarshPareek",
+      "name": "Darsh Pareek",
+      "avatar_url": "https://avatars.githubusercontent.com/u/141240716?v=4",
+      "profile": "https://github.com/DarshPareek",
+      "contributions": [
+        "doc"
+      ]
     }
   ]
 }
