[ENH] fix dependency CI issues and improve adapter methods

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -297,6 +297,7 @@ dl = [
   'einops>0.7.0; python_version < "3.12"',
   'huggingface-hub>=0.23.0; python_version < "3.12"',
   'hydra-core; python_version < "3.13"',
+  'darts>=0.29.0; python_version < "3.13"',
 ]
 mlflow = [
   "mlflow",
