[ENH]Added second test parameter to Column Ensemble Classifier

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -3351,6 +3351,15 @@
       "contributions": [
         "doc"
       ]
+    },
+    {
+      "login": "AYUSH27112021",
+      "name": "Ayush Kumar Singh",
+      "avatar_url": "https://avatars.githubusercontent.com/u/90300049?v=4",
+      "profile": "https://github.com/AYUSH27112021",
+      "contributions": [
+        "code"
+      ]
     }
   ]
 }
