modified all-contribution list

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -158,6 +158,17 @@
       ]
     },
     {
+      "login": "abhishek-iitmadras",
+      "name": "Abhishek Kumar",
+      "avatar_url": "https://avatars.githubusercontent.com/u/142383124?v=4",
+      "profile": "https://github.com/abhishek-iitmadras",
+      "contributions": [
+        "code",
+        "infra",
+        "bug"
+      ]
+    },
+    {
       "login": "MatthewMiddlehurst",
       "name": "Matthew Middlehurst",
       "avatar_url": "https://avatars0.githubusercontent.com/u/25731235?v=4",
