--- a/.github/actions/test-component/action.yml
+++ b/.github/actions/test-component/action.yml
@@ -32,31 +32,35 @@ runs:
       with:
         python-version: ${{ inputs.python-version-identifier }}
 
-    - name: Display Python version
-      run: python -c "import sys; print(sys.version)"
-      shell: bash
-    - name: Install OSX packages
-      run: ./.github/scripts/install_osx_dependencies.sh
-      shell: bash
+    # - name: Display Python version
+    #   run: python -c "import sys; print(sys.version)"
+    #   shell: bash
+    # - name: Install OSX packages
+    #   run: ./.github/scripts/install_osx_dependencies.sh
+    #   shell: bash
 
     - name: Install sktime and dependencies
       run: python3 -m pip install .[${{ inputs.sktime-component-identifier }},tests]
       shell: bash
 
-    - name: Show dependencies
-      run: python -m pip list
-      shell: bash
+    # - name: Show dependencies
+    #   run: python -m pip list
+    #   shell: bash
 
-    - name: Show available branches
-      run: git branch -a
-      shell: bash
+    # - name: Show available branches
+    #   run: git branch -a
+    #   shell: bash
 
-    - name: unit test step
-      run: >-
-        python3
-        -m pytest
-        sktime/tests
-        sktime/${{ inputs.sktime-component-identifier }}
-        --matrixdesign ${{ inputs.sub-sample-estimators }}
-        --only_changed_modules ${{ inputs.test-affected-estimators }}
+    # - name: unit test step
+    #   run: >-
+    #     python3
+    #     -m pytest
+    #     sktime/tests
+    #     sktime/${{ inputs.sktime-component-identifier }}
+    #     --matrixdesign ${{ inputs.sub-sample-estimators }}
+    #     --only_changed_modules ${{ inputs.test-affected-estimators }}
+    #   shell: bash
+
+    - name: anirban debug 7622
+      run: python .github/scripts/anirban_debug_7622.py
       shell: bash
