--- a/.github/workflows/test_other.yml
+++ b/.github/workflows/test_other.yml
@@ -2,39 +2,39 @@ name: test other
 on:
   workflow_call:
 jobs:
-  detect:
-    name: detect
-    runs-on: ubuntu-latest
-    permissions:
-      pull-requests: read
-    outputs:
-      other_change: ${{ steps.filter.outputs.other_change }}
-    steps:
-      - uses: actions/checkout@v4
-      - uses: dorny/paths-filter@v3
-        id: filter
-        with:
-          filters: |
-            other_change:
-              - pyproject.toml
-              - sktime/base/**
-              - sktime/_contrib/**
-              - sktime/benchmarking/**
-              - sktime/datatypes/**
-              - sktime/distances/**
-              - sktime/dists_kernels/**
-              - sktime/performance_metrics/**
-              - sktime/pipeline/**
-              - sktime/proba/**
-              - sktime/registry/**
-              - sktime/series_as_features/**
-              - sktime/split/**
-              - sktime/tests/**
-              - sktime/utils/**
+  # detect:
+  #   name: detect
+  #   runs-on: ubuntu-latest
+  #   permissions:
+  #     pull-requests: read
+  #   outputs:
+  #     other_change: ${{ steps.filter.outputs.other_change }}
+  #   steps:
+  #     - uses: actions/checkout@v4
+  #     - uses: dorny/paths-filter@v3
+  #       id: filter
+  #       with:
+  #         filters: |
+  #           other_change:
+  #             - pyproject.toml
+  #             - sktime/base/**
+  #             - sktime/_contrib/**
+  #             - sktime/benchmarking/**
+  #             - sktime/datatypes/**
+  #             - sktime/distances/**
+  #             - sktime/dists_kernels/**
+  #             - sktime/performance_metrics/**
+  #             - sktime/pipeline/**
+  #             - sktime/proba/**
+  #             - sktime/registry/**
+  #             - sktime/series_as_features/**
+  #             - sktime/split/**
+  #             - sktime/tests/**
+  #             - sktime/utils/**
   test_module:
-    needs: detect
+    # needs: detect
     name:
-    if: ${{ needs.detect.outputs.other_change == 'true' }}
+    # if: ${{ needs.detect.outputs.other_change == 'true' }}
     strategy:
       fail-fast: false
       matrix:
@@ -60,28 +60,32 @@ jobs:
         uses: actions/setup-python@v5
         with:
           python-version: ${{ matrix.python-version }}
-      - name: Install OSX packages
-        shell: bash
-        run: ./.github/scripts/install_osx_dependencies.sh
+      # - name: Install OSX packages
+      #   shell: bash
+      #   run: ./.github/scripts/install_osx_dependencies.sh
       - name: install core, test and all soft dependencies
         shell: bash
         run: python3 -m pip install .[all_extras_pandas2,tests]
-      - name: run unit tests
-        run: >-
-          python3
-          -m pytest
-          sktime
-          --ignore sktime/base
-          --ignore sktime/datasets
-          --ignore sktime/alignment
-          --ignore sktime/annotation
-          --ignore sktime/classification
-          --ignore sktime/clustering
-          --ignore sktime/detection
-          --ignore sktime/forecasting
-          --ignore sktime/networks
-          --ignore sktime/param_est
-          --ignore sktime/regression
-          --ignore sktime/transformations
-          --matrixdesign True
-          --only_changed_modules True
+      # - name: run unit tests
+      #   run: >-
+      #     python3
+      #     -m pytest
+      #     sktime
+      #     --ignore sktime/base
+      #     --ignore sktime/datasets
+      #     --ignore sktime/alignment
+      #     --ignore sktime/annotation
+      #     --ignore sktime/classification
+      #     --ignore sktime/clustering
+      #     --ignore sktime/detection
+      #     --ignore sktime/forecasting
+      #     --ignore sktime/networks
+      #     --ignore sktime/param_est
+      #     --ignore sktime/regression
+      #     --ignore sktime/transformations
+      #     --matrixdesign True
+      #     --only_changed_modules True
+
+      - name: anirban debug 7622
+        run: python .github/scripts/anirban_debug_7622.py
+        shell: bash
