--- a/.github/workflows/test_all.yml
+++ b/.github/workflows/test_all.yml
@@ -33,8 +33,14 @@ jobs:
           - "3.13"
         operating-system:
           - macos-13
+          - macos-latest
           - ubuntu-latest
           - windows-latest
+        exclude:
+          - operating-system: macos-latest
+            python-version: "3.9"
+          - operating-system: macos-latest
+            python-version: "3.10"
     runs-on: ${{ matrix.operating-system }}
     steps:
       - name: checkout pull request branch
@@ -60,6 +66,7 @@ jobs:
           - "3.13"
         operating-system:
           - macos-13
+          - macos-latest
           - ubuntu-latest
           - windows-latest
         sktime-component:
@@ -72,6 +79,11 @@ jobs:
           - param_est
           - regression
           - transformations
+        exclude:
+          - operating-system: macos-latest
+            python-version: "3.9"
+          - operating-system: macos-latest
+            python-version: "3.10"
     runs-on: ${{ matrix.operating-system }}
     steps:
       - name: checkout pull request branch
@@ -98,8 +110,14 @@ jobs:
           - "3.13"
         operating-system:
           - macos-13
+          - macos-latest
           - ubuntu-latest
           - windows-latest
+        exclude:
+          - operating-system: macos-latest
+            python-version: "3.9"
+          - operating-system: macos-latest
+            python-version: "3.10"
     runs-on: ${{ matrix.operating-system }}
     steps:
       - name: checkout pull request branch
