--- a/.github/workflows/test_datasets.yml
+++ b/.github/workflows/test_datasets.yml
@@ -18,8 +18,14 @@ jobs:
           - "3.13"
         operating-system:
           - macos-13
+          - macos-latest
           - ubuntu-latest
           - windows-latest
+        exclude:
+          - operating-system: macos-latest
+            python-version: "3.9"
+          - operating-system: macos-latest
+            python-version: "3.10"
     runs-on: ${{ matrix.operating-system }}
     steps:
       - name: repository checkout step
@@ -54,8 +60,14 @@ jobs:
           - "3.13"
         operating-system:
           - macos-13
+          - macos-latest
           - ubuntu-latest
           - windows-latest
+        exclude:
+          - operating-system: macos-latest
+            python-version: "3.9"
+          - operating-system: macos-latest
+            python-version: "3.10"
     runs-on: ${{ matrix.operating-system }}
     steps:
       - name: repository checkout step
