--- a/.github/workflows/test_module.yml
+++ b/.github/workflows/test_module.yml
@@ -65,8 +65,14 @@ jobs:
           - "3.13"
         operating-system:
           - macos-13
+          - macos-latest
           - ubuntu-latest
           - windows-latest
+        exclude:
+          - operating-system: macos-latest
+            python-version: "3.9"
+          - operating-system: macos-latest
+            python-version: "3.10"
         sktime-component: ${{ fromJSON(needs.detect.outputs.module_changes) }}
     runs-on: ${{ matrix.operating-system }}
     steps:
