[ENH] window based time series segmentation via clustering : wclust-restored (#7612)
<!--
Welcome to sktime, and thanks for contributing!
Please have a look at our contribution guide:
https://www.sktime.net/en/latest/get_involved/contributing.html
-->

#### Reference Issues/PRs
Implements #7142 

#### What does this implement/fix? Explain your changes.
Implements window based segmentation via clustering default being
TimeSeriesKMeansTslearn

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -3351,6 +3351,15 @@
       "contributions": [
         "doc"
       ]
+    },
+    {
+      "login": "Ankit-1204",
+      "name": "Ankit Upadhyay",
+      "avatar_url": "https://avatars.githubusercontent.com/u/112757447?v=4",
+      "profile": "https://github.com/Ankit-1204",
+      "contributions": [
+        "code"
+      ]
     }
   ]
 }
