[DOC] add newer patterns to handle multivariate data in tutorial (#7362)
#### Reference Issues/PRs

Towards #7237 

#### What does this implement/fix? Explain your changes.

Adds the new patterns to deal with unequal length and multi-variate data into the classification tutorial.

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -3234,6 +3234,15 @@
       ]
     },
     {
+      "login": "PranavBhatP",
+      "name": "PranavBhatP",
+      "avatar_url": "https://avatars.githubusercontent.com/PranavBhatP",
+      "profile" :"https://github.com/PranavBhatP",
+      "contributions": [
+        "doc"
+      ]
+    },
+    {
       "login": "mjste",
       "name": "Michał Stefanik",
       "avatar_url": "https://avatars.githubusercontent.com/mjste",
