[ENH] Implement _evaluate_by_index for MdAPE (#7606)
#### Reference Issues/PRs
#4304 

#### What does this implement/fix? Explain your changes.
Implements `_evaluate_by_index` for `MedianAbsolutePercentageError`

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -3261,6 +3261,15 @@
       ]
     },
     {
+      "login": "HarshvirSandhu",
+      "name": "Harshvir Sandhu",
+      "avatar_url": "https://avatars.githubusercontent.com/HarshvirSandhu",
+      "profile": "https://github.com/HarshvirSandhu",
+      "contributions": [
+        "code"
+      ]
+    },
+    {
       "login": "alyssadsouza",
       "name": "Alyssa D'Souza",
       "avatar_url": "https://avatars.githubusercontent.com/alyssadsouza",
@@ -3314,7 +3323,7 @@
       "avatar_url": "https://avatars.githubusercontent.com/u/130629672?v=4",
       "profile": "https://github.com/Adarsh2345",
       "contributions": [
-         "doc"
+        "doc"
       ]
     },
     {
