Fix merge conflict

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -3292,7 +3292,7 @@
       "login": "tanvincible",
       "name": "Tanvi Pooranmal Meena",
       "avatar_url": "https://avatars.githubusercontent.com/tanvincible",
-      "profile": "https://github.com/TanviPooranmal",
+      "profile": "https://github.com/tanvincible",
       "contributions": [
         "code",
         "doc"
