[DOC] update GitHub name of NoaWegerhoff (#7682)
This updates references in the code base - e.g., links to the account
and references in the contributor registry - to the new GitHub account name of @NoaWegerhoff.

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -1707,10 +1707,10 @@
       ]
     },
     {
-      "login": "NoaBenAmi",
+      "login": "NoaWegerhoff",
       "name": "Noa Ben Ami",
       "avatar_url": "https://avatars.githubusercontent.com/u/37590002?v=4",
-      "profile": "https://github.com/NoaBenAmi",
+      "profile": "https://github.com/NoaWegerhoff",
       "contributions": [
         "code",
         "test",
